feat: replace custom icon components with Phosphor icons for improved consistency and performance

--- a/angular.json
+++ b/angular.json
@@ -51,6 +51,7 @@
               }
             ],
             "styles": [
+              "@phosphor-icons/web/duotone/style.css",
               "src/styles.css"
             ]
           },
