--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/forms": "^21.1.0",
     "@angular/platform-browser": "^21.1.0",
     "@angular/router": "^21.1.0",
+    "@formkit/auto-animate": "^0.9.0",
     "@phosphor-icons/web": "^2.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
