feat: add Charter and Space Grotesk fonts for improved typography and styling

--- a/angular.json
+++ b/angular.json
@@ -52,6 +52,7 @@
             ],
             "styles": [
               "@phosphor-icons/web/duotone/style.css",
+              "charter-webfont/charter.css",
               "src/styles.css"
             ]
           },
