--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/router": "^21.1.0",
     "@formkit/auto-animate": "^0.9.0",
     "@phosphor-icons/web": "^2.1.2",
+    "charter-webfont": "^4.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
